// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Search /> should not use siret2idcc when no entreprise result 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4 {
  position: relative;
  overflow: hidden;
}

.c4:before,
.c4:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c4:before {
  left: -2rem;
}

.c4:after {
  right: -2rem;
}

.c5 {
  overflow-x: auto;
}

.c6 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-collapse: collapse;
  border-spacing: 0;
}

.c6 caption {
  padding: 1rem 0;
  font-style: italic;
  text-align: center;
}

.c6 td,
.c6 th {
  padding: 1rem 1.6rem;
  border: 1px solid #bbcadf;
}

.c6 th {
  color: #2f3b6c;
  font-weight: 600;
  background: #e4e8ef;
}

.c6 thead,
.c6 tfoot {
  padding: 1rem 1.6rem;
  vertical-align: bottom;
  background: #f2f5fa;
}

.c6 tfoot {
  vertical-align: top;
}

.c7 {
  width: 100%;
  table-layout: fixed;
}

.c8 {
  font-weight: bold;
  background: #e4e8ef;
}

.c3 {
  margin-top: 2rem;
}

.c13 {
  color: #4d73b8;
  cursor: pointer;
}

.c2 {
  width: 100%;
}

.c12 {
  margin: 1rem 0;
}

.c11 {
  margin-top: 1rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  -webkit-flex: 1 1 calc(100% - 200px);
  -ms-flex: 1 1 calc(100% - 200px);
  flex: 1 1 calc(100% - 200px);
  margin-right: 1rem;
  overflow: hidden;
  color: #3e486e;
  font-weight: bold;
  font-size: 1.8rem;
  white-space: nowrap;
  text-overflow: ellipsis;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <input
      class="c2"
      placeholder="Nom d'entreprise, SIRET, nom de convention collective"
      role="search"
      type="search"
      value="xxxx"
    />
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <table
            class="c6 c7"
          >
            <tbody>
              <tr
                class="c8"
              >
                <td>
                  Conventions collectives
                </td>
              </tr>
              <tr>
                <td>
                  <div
                    class="c9"
                  >
                    <div
                      class="c10"
                    >
                      IDCC 0275
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <div
                      class="c12"
                    >
                      <a
                        class="c13"
                      >
                        titre convention 1
                      </a>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> should render 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c2 {
  width: 100%;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <input
      class="c2"
      placeholder="Nom d'entreprise, SIRET, nom de convention collective"
      role="search"
      type="search"
      value=""
    />
    
  </div>
</div>
`;

exports[`<Search /> should show no results when no result 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c3 {
  margin-top: 2rem;
}

.c2 {
  width: 100%;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <input
      class="c2"
      placeholder="Nom d'entreprise, SIRET, nom de convention collective"
      role="search"
      type="search"
      value="9999"
    />
    <div
      class="c3"
    >
      <div>
        Aucun résultat pour votre recherche.
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> should show spinner when loading 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c3 {
  margin-top: 2rem;
}

.c2 {
  width: 100%;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <input
      class="c2"
      placeholder="Nom d'entreprise, SIRET, nom de convention collective"
      role="search"
      type="search"
      value="8888"
    />
    <div
      class="c3"
    >
      <div>
        <svg
          aria-labelledby="title desc"
          class="__react-svg-spinner_circle"
          height="1em"
          role="img"
          style="animation-duration: 750ms;"
          viewBox="0 0 32 32"
          width="1em"
        >
          <title
            id="title"
          >
            Circle loading spinner
          </title>
          <desc
            id="desc"
          >
            Image of a partial circle indicating "loading."
          </desc>
          <style>
            
      .__react-svg-spinner_circle{
          transition-property: transform;
          animation-name: __react-svg-spinner_infinite-spin;
          animation-iteration-count: infinite;
          animation-timing-function: linear;
      }
      @keyframes __react-svg-spinner_infinite-spin {
          from {transform: rotate(0deg)}
          to {transform: rotate(360deg)}
      }
    
          </style>
          <circle
            cx="16"
            cy="16"
            fill="none"
            r="12"
            role="presentation"
            stroke="rgba(0,0,0,0.4)"
            stroke-dasharray="43.982297150257104"
            stroke-linecap="round"
            stroke-width="4"
          />
        </svg>
         Recherche des convention collectives...
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> when input is IDCC, should search conventions 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4 {
  position: relative;
  overflow: hidden;
}

.c4:before,
.c4:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c4:before {
  left: -2rem;
}

.c4:after {
  right: -2rem;
}

.c5 {
  overflow-x: auto;
}

.c6 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-collapse: collapse;
  border-spacing: 0;
}

.c6 caption {
  padding: 1rem 0;
  font-style: italic;
  text-align: center;
}

.c6 td,
.c6 th {
  padding: 1rem 1.6rem;
  border: 1px solid #bbcadf;
}

.c6 th {
  color: #2f3b6c;
  font-weight: 600;
  background: #e4e8ef;
}

.c6 thead,
.c6 tfoot {
  padding: 1rem 1.6rem;
  vertical-align: bottom;
  background: #f2f5fa;
}

.c6 tfoot {
  vertical-align: top;
}

.c7 {
  width: 100%;
  table-layout: fixed;
}

.c8 {
  font-weight: bold;
  background: #e4e8ef;
}

.c3 {
  margin-top: 2rem;
}

.c13 {
  color: #4d73b8;
  cursor: pointer;
}

.c2 {
  width: 100%;
}

.c12 {
  margin: 1rem 0;
}

.c11 {
  margin-top: 1rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  -webkit-flex: 1 1 calc(100% - 200px);
  -ms-flex: 1 1 calc(100% - 200px);
  flex: 1 1 calc(100% - 200px);
  margin-right: 1rem;
  overflow: hidden;
  color: #3e486e;
  font-weight: bold;
  font-size: 1.8rem;
  white-space: nowrap;
  text-overflow: ellipsis;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <input
      class="c2"
      placeholder="Nom d'entreprise, SIRET, nom de convention collective"
      role="search"
      type="search"
      value="1234"
    />
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <table
            class="c6 c7"
          >
            <tbody>
              <tr
                class="c8"
              >
                <td>
                  Conventions collectives
                </td>
              </tr>
              <tr>
                <td>
                  <div
                    class="c9"
                  >
                    <div
                      class="c10"
                    >
                      IDCC 0275
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <div
                      class="c12"
                    >
                      <a
                        class="c13"
                        href="/convention-collective/0275-titre-convention-1"
                      >
                        titre convention 1
                      </a>
                    </div>
                  </div>
                </td>
              </tr>
              <tr>
                <td>
                  <div
                    class="c9"
                  >
                    <div
                      class="c10"
                    >
                      IDCC 0276
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <div
                      class="c12"
                    >
                      <a
                        class="c13"
                        href="/convention-collective/0276-titre-convention-2"
                      >
                        titre convention 2
                      </a>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> when input is a valid IDCC, should show only the perfect match  1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4 {
  position: relative;
  overflow: hidden;
}

.c4:before,
.c4:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c4:before {
  left: -2rem;
}

.c4:after {
  right: -2rem;
}

.c5 {
  overflow-x: auto;
}

.c6 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-collapse: collapse;
  border-spacing: 0;
}

.c6 caption {
  padding: 1rem 0;
  font-style: italic;
  text-align: center;
}

.c6 td,
.c6 th {
  padding: 1rem 1.6rem;
  border: 1px solid #bbcadf;
}

.c6 th {
  color: #2f3b6c;
  font-weight: 600;
  background: #e4e8ef;
}

.c6 thead,
.c6 tfoot {
  padding: 1rem 1.6rem;
  vertical-align: bottom;
  background: #f2f5fa;
}

.c6 tfoot {
  vertical-align: top;
}

.c7 {
  width: 100%;
  table-layout: fixed;
}

.c8 {
  font-weight: bold;
  background: #e4e8ef;
}

.c3 {
  margin-top: 2rem;
}

.c13 {
  color: #4d73b8;
  cursor: pointer;
}

.c2 {
  width: 100%;
}

.c12 {
  margin: 1rem 0;
}

.c11 {
  margin-top: 1rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  -webkit-flex: 1 1 calc(100% - 200px);
  -ms-flex: 1 1 calc(100% - 200px);
  flex: 1 1 calc(100% - 200px);
  margin-right: 1rem;
  overflow: hidden;
  color: #3e486e;
  font-weight: bold;
  font-size: 1.8rem;
  white-space: nowrap;
  text-overflow: ellipsis;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <input
      class="c2"
      placeholder="Nom d'entreprise, SIRET, nom de convention collective"
      role="search"
      type="search"
      value="4567"
    />
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <table
            class="c6 c7"
          >
            <tbody>
              <tr
                class="c8"
              >
                <td>
                  Conventions collectives
                </td>
              </tr>
              <tr>
                <td>
                  <div
                    class="c9"
                  >
                    <div
                      class="c10"
                    >
                      IDCC 4567
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <div
                      class="c12"
                    >
                      <a
                        class="c13"
                        href="/convention-collective/4567-titre-convention-2"
                      >
                        titre convention 2
                      </a>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> when searching SIRET, should use API SIREN and siret2idcc 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4 {
  position: relative;
  overflow: hidden;
}

.c4:before,
.c4:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c4:before {
  left: -2rem;
}

.c4:after {
  right: -2rem;
}

.c5 {
  overflow-x: auto;
}

.c6 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-collapse: collapse;
  border-spacing: 0;
}

.c6 caption {
  padding: 1rem 0;
  font-style: italic;
  text-align: center;
}

.c6 td,
.c6 th {
  padding: 1rem 1.6rem;
  border: 1px solid #bbcadf;
}

.c6 th {
  color: #2f3b6c;
  font-weight: 600;
  background: #e4e8ef;
}

.c6 thead,
.c6 tfoot {
  padding: 1rem 1.6rem;
  vertical-align: bottom;
  background: #f2f5fa;
}

.c6 tfoot {
  vertical-align: top;
}

.c7 {
  width: 100%;
  table-layout: fixed;
}

.c8 {
  font-weight: bold;
  background: #e4e8ef;
}

.c3 {
  margin-top: 2rem;
}

.c13 {
  color: #4d73b8;
  cursor: pointer;
}

.c2 {
  width: 100%;
}

.c12 {
  margin: 1rem 0;
}

.c11 {
  margin-top: 1rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  -webkit-flex: 1 1 calc(100% - 200px);
  -ms-flex: 1 1 calc(100% - 200px);
  flex: 1 1 calc(100% - 200px);
  margin-right: 1rem;
  overflow: hidden;
  color: #3e486e;
  font-weight: bold;
  font-size: 1.8rem;
  white-space: nowrap;
  text-overflow: ellipsis;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <input
      class="c2"
      placeholder="Nom d'entreprise, SIRET, nom de convention collective"
      role="search"
      type="search"
      value="01234567891011"
    />
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <table
            class="c6 c7"
          >
            <tbody>
              <tr
                class="c8"
              >
                <td>
                  Entreprises
                </td>
              </tr>
              <tr>
                <td>
                  <div
                    class="c9"
                  >
                    <div
                      class="c10"
                    >
                      Entreprise 1 93100 Commune test
                    </div>
                    <a
                      href="https://entreprise.data.gouv.fr/etablissement/01234567891011"
                      rel="noopener noreferrer"
                      style="font-size: 0.8em;"
                      target="_blank"
                      title="Ouvrir la fiche entreprise"
                    >
                      Fiche entreprise
                    </a>
                  </div>
                  <div
                    class="c11"
                  >
                    <div
                      class="c12"
                    >
                      <a
                        class="c13"
                      >
                        Convention 1
                      </a>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<Search /> when searching by text, should use ES, api SIREN and siret2idcc 1`] = `
.c0 {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 2rem;
}

.c0 > *:first-child {
  margin-top: 0;
}

.c0 > *:last-child {
  margin-bottom: 0;
}

.c1 {
  margin: 0 0 1rem 0;
  color: #2f3b6c;
  font-weight: 600;
  font-size: 1.8rem;
  font-family: "Open Sans",sans-serif;
  line-height: 1.25;
}

.c4 {
  position: relative;
  overflow: hidden;
}

.c4:before,
.c4:after {
  position: absolute;
  top: 0;
  bottom: 0;
  display: block;
  width: 4rem;
  opacity: 0;
  -webkit-transition: opacity 0.3s linear;
  transition: opacity 0.3s linear;
  content: "";
  pointer-events: none;
  background: radial-gradient( ellipse at center, #fff 15%, rgba(255,255,255,0) 80% );
}

.c4:before {
  left: -2rem;
}

.c4:after {
  right: -2rem;
}

.c5 {
  overflow-x: auto;
}

.c6 {
  text-align: left;
  empty-cells: show;
  background-color: #fff;
  border: 1px solid #bbcadf;
  border-collapse: collapse;
  border-spacing: 0;
}

.c6 caption {
  padding: 1rem 0;
  font-style: italic;
  text-align: center;
}

.c6 td,
.c6 th {
  padding: 1rem 1.6rem;
  border: 1px solid #bbcadf;
}

.c6 th {
  color: #2f3b6c;
  font-weight: 600;
  background: #e4e8ef;
}

.c6 thead,
.c6 tfoot {
  padding: 1rem 1.6rem;
  vertical-align: bottom;
  background: #f2f5fa;
}

.c6 tfoot {
  vertical-align: top;
}

.c7 {
  width: 100%;
  table-layout: fixed;
}

.c8 {
  font-weight: bold;
  background: #e4e8ef;
}

.c3 {
  margin-top: 2rem;
}

.c13 {
  color: #4d73b8;
  cursor: pointer;
}

.c2 {
  width: 100%;
}

.c12 {
  margin: 1rem 0;
}

.c11 {
  margin-top: 1rem;
}

.c9 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: baseline;
  -webkit-box-align: baseline;
  -ms-flex-align: baseline;
  align-items: baseline;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

.c10 {
  -webkit-flex: 1 1 calc(100% - 200px);
  -ms-flex: 1 1 calc(100% - 200px);
  flex: 1 1 calc(100% - 200px);
  margin-right: 1rem;
  overflow: hidden;
  color: #3e486e;
  font-weight: bold;
  font-size: 1.8rem;
  white-space: nowrap;
  text-overflow: ellipsis;
}

@media print {
  .c0 {
    max-width: 100%;
    padding: 0;
  }
}

<div>
  <div
    class="c0"
  >
    <h3
      class="c1"
    >
      Recherche de convention collective
    </h3>
    <p>
      Renseignez le nom de votre entreprise, son SIRET ou le nom de votre convention collective.
    </p>
    <input
      class="c2"
      placeholder="Nom d'entreprise, SIRET, nom de convention collective"
      role="search"
      type="search"
      value="hello"
    />
    <div
      class="c3"
    >
      <div
        class="c4"
      >
        <div
          class="c5"
        >
          <table
            class="c6 c7"
          >
            <tbody>
              <tr
                class="c8"
              >
                <td>
                  Conventions collectives
                </td>
              </tr>
              <tr>
                <td>
                  <div
                    class="c9"
                  >
                    <div
                      class="c10"
                    >
                      IDCC 0275
                    </div>
                  </div>
                  <div
                    class="c11"
                  >
                    <div
                      class="c12"
                    >
                      <a
                        class="c13"
                      >
                        titre convention 1
                      </a>
                    </div>
                  </div>
                </td>
              </tr>
              <tr
                class="c8"
              >
                <td>
                  Entreprises
                </td>
              </tr>
              <tr>
                <td>
                  <div
                    class="c9"
                  >
                    <div
                      class="c10"
                    >
                      Entreprise 1 93100 Commune test
                    </div>
                    <a
                      href="https://entreprise.data.gouv.fr/etablissement/44144914700020"
                      rel="noopener noreferrer"
                      style="font-size: 0.8em;"
                      target="_blank"
                      title="Ouvrir la fiche entreprise"
                    >
                      Fiche entreprise
                    </a>
                  </div>
                  <div
                    class="c11"
                  >
                    <div
                      class="c12"
                    >
                      <a
                        class="c13"
                      >
                        Convention 1
                      </a>
                    </div>
                  </div>
                </td>
              </tr>
            </tbody>
          </table>
        </div>
      </div>
    </div>
  </div>
</div>
`;
